--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "raulfraile/ladybug-bundle": "1.0.*",
-        "elasticsearch/elasticsearch": "1.2.2",
+        "elasticsearch/elasticsearch": "1.4.*",
         "friendsofsymfony/elastica-bundle": "~3.0",
         "guzzle/guzzle": "^3.9"
     },
