--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
         "psr-0": { "": "src/", "SymfonyStandard": "app/" }
     },
     "require": {
-        "php": ">=5.3.3",
-        "symfony/symfony": "2.7.*",
+        "php": ">=5.3.9",
+        "symfony/symfony": "^2.8@dev",
         "doctrine/orm": "~2.2,>=2.2.3,<2.5",
         "doctrine/dbal": "<2.5",
         "doctrine/doctrine-bundle": "~1.4",
@@ -20,9 +20,10 @@
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "raulfraile/ladybug-bundle": "1.0.*",
-        "elasticsearch/elasticsearch": "1.4.*",
+        "ruflin/elastica": "2.*",
         "friendsofsymfony/elastica-bundle": "~3.0",
-        "guzzle/guzzle": "^3.9"
+        "guzzle/guzzle": "^3.9",
+        "twig/twig": "^1.23"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
