--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,10 +1,5 @@
 parameters:
-    database_driver:   pdo_mysql
-    database_host:     127.0.0.1
-    database_port:     ~
-    database_name:     symfony
-    database_user:     root
-    database_password: ~
+    database_path: '%kernel.root_dir%/Chinook_Sqlite.sqlite'
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
