--- a/src/Bundle/PlayWithElasticSearchBundle/Resources/config/services.yml
+++ b/src/Bundle/PlayWithElasticSearchBundle/Resources/config/services.yml
@@ -2,6 +2,14 @@ parameters:
 #    atrapalo_play_with_elastic_search.example.class: Atrapalo\PlayWithElasticSearchBundle\Example
 
 services:
-#    atrapalo_play_with_elastic_search.example:
-#        class: %atrapalo_play_with_elastic_search.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    playlist_repository:
+        class: Bundle\PlayWithElasticSearchBundle\Entity\PlaylistRepository
+        factory: [@doctrine, "getRepository"]
+        arguments:
+            - "PlayWithElasticSearchBundle:Playlist"
+
+    track_repository:
+        class: Bundle\PlayWithElasticSearchBundle\Entity\TrackRepository
+        factory: [@doctrine, "getRepository"]
+        arguments:
+            - "PlayWithElasticSearchBundle:Track"
