composer update, remove fos elastica, some configs

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,8 +73,8 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
-fos_elastica:
-    clients:
-        default: { host: localhost, port: 9200 }
-    indexes:
-        search: ~
+#fos_elastica:
+#    clients:
+#        default: { host: localhost, port: 9200 }
+#    indexes:
+#        search: ~
