--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
         "psr-0": { "": "src/", "SymfonyStandard": "app/" }
     },
     "require": {
-        "php": ">=5.3.9",
+        "php": ">=7",
         "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.5",
         "doctrine/dbal": "2.5.*",
-        "doctrine/doctrine-bundle": "~1.4",
+        "doctrine/doctrine-bundle": "~1.6",
         "twig/extensions": "~1.0",
         "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
@@ -21,13 +21,14 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "raulfraile/ladybug-bundle": "1.0.*",
         "ruflin/elastica": "2.*",
-        "friendsofsymfony/elastica-bundle": "~3.0",
         "guzzle/guzzle": "^3.9",
         "twig/twig": "^1.23",
         "predis/predis": "^1.0"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "phpunit/phpunit": "~5.2",
+        "symfony/phpunit-bridge": "~2.7"
     },
     "scripts": {
         "post-root-package-install": [
